set(REMILL_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
add_subdirectory(BC)
target_include_directories(${LIB_TARGET} PUBLIC  "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>" "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
target_link_libraries(libvexllvm PUBLIC ${llvm_libs})
set_target_properties(remill_bc PROPERTIES FOLDER "Utils")